--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-watch": "~0.6.0",
     "grunt-browserify-bower": "~0.1.4",
     "debowerify": "~0.7.0",
-    "grunt-contrib-less": "~0.10.0"
+    "grunt-contrib-less": "~0.10.0",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
