--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -12,6 +12,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.14"
+    "angular": "~1.2.14",
+    "angular-ui-router": "~0.2.10"
   }
 }
