--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.14",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-cookie": "*"
   }
 }
