--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "~1.2.14",
     "angular-ui-router": "~0.2.10",
-    "angular-cookie": "*"
+    "angular-cookie": "*",
+    "angular-bootstrap": "~0.10.0"
   }
 }
