--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,6 +15,7 @@
     "angular": "~1.2.14",
     "angular-ui-router": "~0.2.10",
     "angular-cookie": "*",
-    "angular-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0",
+    "moment": "~2.5.1"
   }
 }
